overflow, open in tab bug fixes

--- a/src/client/views/MainView.scss
+++ b/src/client/views/MainView.scss
@@ -139,6 +139,7 @@
     border-left: solid 1px;
     z-index: 100000;
     cursor: auto;
+    overflow-x: visible;
 }
 
 .mainView-flyoutContainer {
