--- a/src/client/views/PropertiesButtons.scss
+++ b/src/client/views/PropertiesButtons.scss
@@ -50,6 +50,7 @@ $linkGap : 3px;
     height: auto;
     display: flex;
     flex-direction: row;
+    overflow-x: visible;
 }
 
 .propertiesButtons-button {
